<resources>
    <string name="_1">1</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_the_offer">About the Offer</string>
    <string name="above_99">99+</string>
    <string name="account">Account</string>
    <string name="activate">Activate</string>
    <string name="activated">Activated!</string>
    <string name="active_vouchers">Active Vouchers</string>
    <string name="add">Add</string>
    <string name="add_a_new_address">Add New Address +</string>
    <string name="add_address">Add Address</string>
    <string name="add_n_images">Add %1$d Images</string>
    <string name="add_to_cart_lower">Add To Cart</string>
    <string name="add_wishlist">Added to your Wishlist!</string>
    <string name="added_lower">Added</string>
    <string name="added_to_cart">Product added to cart</string>
    <string name="added_to_cart_lower">Added In Cart</string>
    <string name="address_1">House No./ Building No.</string>
    <string name="address_2">Street / Locality</string>
    <string name="address_amp_payment">Address &amp; Payment</string>
    <string name="address_information">Address Information</string>
    <string name="all">All</string>
    <string name="all_brands">All Brands</string>
    <string name="all_categories">All Categories</string>
    <string name="all_time">All Time</string>
    <string name="already_a_smytten_member_sign_in">Already a Smytten member? <u><font color="#0F1829"><b>Sign In</b></font></u></string>
    <string name="already_in_cart">We thank you for your interest in trying this product, but you can try only one product from this brand at this moment.</string>
    <string name="already_in_cart_title">"You've selected a trial from this brand already!"</string>
    <string name="already_tried_txt">Already Tried</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_millis">1713847332583</string>
    <string name="app_name">Smytten</string>
    <string name="app_time">Apr23_1012</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applied">Applied</string>
    <string name="apply">Apply</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="apply_filters_again">Apply filters again</string>
    <string name="appsflyer_api_key">CPFga5eergmS7hxBqJhf6R</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="area_pincode">Area Pincode</string>
    <string name="arrow">→</string>
    <string name="assist">Assist</string>
    <string name="assist_logo">Paytm Logo</string>
    <string name="available">Available</string>
    <string name="available_voucher">Available Voucher</string>
    <string name="available_vouchers">Available Vouchers</string>
    <string name="back">Back</string>
    <string name="become_a_member">Become a Member</string>
    <string name="best_price">Best Price</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="browse_by_brands">By Brands</string>
    <string name="browse_by_category">By Categories</string>
    <string name="bucks">Bucks</string>
    <string name="but_don_t_worry_you_will_still_get_to_enjoy_the_best_deals_amp_offers_with_us">"But don’t worry, you will still get to enjoy the 
 best deals &amp; offers with us."</string>
    <string name="by_continuing_you_agree_to_smytten_s_privacy_policy_amp_terms_of_service">"By continuing you agree to Smytten's Privacy Policy &amp; Terms of Service."</string>
    <string name="by_proceeding_you_are_accepting_our_refund_cancellation_policy">By proceeding you are accepting our <a>Returns &amp; Cancellation Policy.</a></string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_product">Cancel Product</string>
    <string name="cancelled">cancelled</string>
    <string name="cancelled_orders">Cancelled Orders</string>
    <string name="care_email">care@smytten.com</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="catalogue">Catalogue</string>
    <string name="change">Change</string>
    <string name="change_picture">Change Picture</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="choose_another">Choose another</string>
    <string name="choose_shade">Choose Shade</string>
    <string name="city">City</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_nknow_more">"Click to
know more!"</string>
    <string name="close">CLOSE</string>
    <string name="cod_payment_text">Amount to pay: ₹%1$.2f</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">ddc6fda501f14945bca10804870014ba</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="description">description</string>
    <string name="discover_something_new_place_an_order_today">Discover something new, place an order today!</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="home">Home</string>
    <string name="internet_connection_error">"Please check your internet connection or
refresh the page."</string>
    <string name="landmark">Landmark</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="my_orders">My Orders</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="pincode">Pincode</string>
    <string name="refresh_page">Refresh Page</string>
    <string name="retry">Retry</string>
    <string name="save_address">Save Address</string>
    <string name="save_this_as">Save This As:</string>
    <string name="state">State</string>
    <string name="you_do_not_have_any_orders">Sorry, You do not have any orders!</string>
</resources>