<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/item_order_list_empty_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_empty_data" android:layout_width="@dimen/_150sdp" android:layout_height="@dimen/_150sdp" android:src="@drawable/ic_empty_order_list_filter" android:contentDescription="@string/description" app:layout_constraintBottom_toTopOf="@id/tv_empty_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
    <TextView android:textSize="20.0sp" android:textColor="@color/colorPrimaryDark" android:id="@id/tv_empty_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:text="@string/you_do_not_have_any_orders" app:layout_constraintBottom_toTopOf="@id/tv_empty_desc" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_empty_data" />
    <TextView android:textSize="16.0sp" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:id="@id/tv_empty_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8sdp" android:layout_marginBottom="@dimen/_38sdp" android:text="@string/discover_something_new_place_an_order_today" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_empty_title" />
</androidx.constraintlayout.widget.ConstraintLayout>