<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:tag="layout/activity_order_list_0" android:background="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar android:id="@id/tb_my_orders" android:background="?colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="?actionBarSize" app:layout_constraintTop_toTopOf="parent" app:navigationIcon="@drawable/ic_toolbar_back_arrow" app:title="@string/my_orders" app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.card.MaterialCardView android:id="@id/cv_root_main" android:layout_width="fill_parent" android:layout_height="fill_parent" app:cardBackgroundColor="@color/pale_white" app:cardElevation="0.0dip" app:layout_behavior="@string/appbar_scrolling_view_behavior" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/rl_toolbar" app:shapeAppearanceOverlay="@style/TopRoundedCornerCard">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/swf_order_list" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <include android:id="@id/ll_loader" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/actionbar_height" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/loader_layout" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_my_orders" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <include android:id="@id/include_header" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" layout="@layout/item_header_order_list" />
                <Button android:id="@id/btn_retry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/retry" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_internet" android:background="@color/white" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="200.0dip" android:layout_height="180.0dip" android:src="@drawable/internet_issue_cat" android:contentDescription="@string/description" />
        <TextView android:textSize="@dimen/_14ssp" android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_14sdp" android:layout_marginTop="@dimen/_20sdp" android:layout_marginRight="@dimen/_14sdp" android:text="Sorry! Something seems wrong." android:fontFamily="@font/inter_medium" />
        <TextView android:textSize="@dimen/_11ssp" android:textColor="@color/black_40" android:gravity="center" android:id="@id/tv_internet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_14sdp" android:layout_marginRight="@dimen/_14sdp" android:text="@string/internet_connection_error" android:fontFamily="@font/inter_regular" />
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/_12ssp" android:id="@id/btn_refresh" android:paddingLeft="@dimen/_28sdp" android:paddingTop="@dimen/_12sdp" android:paddingRight="@dimen/_28sdp" android:paddingBottom="@dimen/_12sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_20sdp" android:text="@string/refresh_page" android:textAllCaps="false" android:fontFamily="@font/inter_semibold" android:backgroundTint="@color/link_text" android:letterSpacing="0.02" app:shapeAppearance="@style/CurvedRoundedCornerCard25Percent" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>