<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:tag="layout/activity_add_address_0" android:background="@color/text_color_f9" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/rl_toolbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="0.0dip" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/iv_close" android:padding="@dimen/_11sdp" android:layout_width="@dimen/actionbar_height" android:layout_height="0.0dip" android:src="@drawable/wishlist_back_arrow" android:contentDescription="@string/description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="1:1" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/color_primary_lighter_color" />
            <TextView android:textSize="@dimen/_13ssp" android:textColor="@color/color_primary_lighter_color" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/tv_title" android:tag="binding_1" android:paddingTop="@dimen/_16sdp" android:paddingBottom="@dimen/_16sdp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" android:fontFamily="@font/inter_semibold" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/iv_close" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:id="@id/ns_scroll" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/ll_proceed" app:layout_constraintTop_toBottomOf="@id/rl_toolbar">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_address_field" android:padding="@dimen/_16sdp" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputLayout android:id="@id/til_fname" android:layout_width="fill_parent" android:layout_height="wrap_content" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_fname" android:tag="binding_2" android:hint="@string/first_name" android:maxLength="255" android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz" android:inputType="textPersonName|textCapWords|textNoSuggestions" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/til_lname" android:layout_width="fill_parent" android:layout_height="wrap_content" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_lname" android:tag="binding_3" android:hint="@string/last_name" android:maxLength="255" android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz" android:inputType="textPersonName|textCapWords|textNoSuggestions" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/til_mobile" android:layout_width="fill_parent" android:layout_height="wrap_content" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_mobile" android:tag="binding_4" android:hint="@string/mobile_number" android:maxLength="10" android:digits="\ 1234567890" android:inputType="phone" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/til_email" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_email" android:tag="binding_5" android:hint="@string/email_address" android:maxLength="255" android:inputType="textEmailAddress" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/colorPrimaryDark" android:id="@id/tv_address_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2sdp" android:layout_marginBottom="@dimen/_4sdp" android:text="@string/address_information" android:fontFamily="@font/inter_semibold" />
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/black_50" android:id="@id/til_house" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/address_1" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_house" android:tag="binding_6" android:hint="@string/address_1" android:maxLength="255" android:inputType="text" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/til_street" android:layout_width="fill_parent" android:layout_height="wrap_content" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_street" android:tag="binding_7" android:hint="@string/address_2" android:maxLength="255" android:inputType="text" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/til_landmark" android:layout_width="fill_parent" android:layout_height="wrap_content" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_landmark" android:tag="binding_8" android:hint="@string/landmark" android:maxLength="255" android:inputType="text" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/til_pincode" android:layout_width="fill_parent" android:layout_height="wrap_content" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" style="@style/addressInput">
                <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_pincode" android:tag="binding_9" android:hint="@string/pincode" android:maxLength="6" android:digits="\ 1234567890" android:inputType="number" style="@style/addressInputEdit" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout android:id="@id/til_city" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/_4sdp" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" app:layout_constraintEnd_toStartOf="@id/til_state" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/addressInput">
                    <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:id="@id/et_city" android:tag="binding_10" android:hint="@string/city" android:maxLength="6" android:inputType="text" style="@style/addressInputEdit" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout android:id="@id/til_state" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="@dimen/_4sdp" app:boxCornerRadiusBottomEnd="@dimen/_8sdp" app:boxCornerRadiusBottomStart="@dimen/_8sdp" app:boxCornerRadiusTopEnd="@dimen/_8sdp" app:boxCornerRadiusTopStart="@dimen/_8sdp" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/til_city" app:layout_constraintTop_toTopOf="@id/til_city" style="@style/addressInput">
                    <com.google.android.material.textfield.TextInputEditText android:textColorHint="@color/black_50" android:ellipsize="end" android:id="@id/et_state" android:tag="binding_11" android:focusable="false" android:clickable="true" android:hint="@string/state" android:inputType="none" style="@style/addressInputEdit" />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView android:layout_width="@dimen/_15sdp" android:layout_height="@dimen/_10sdp" android:layout_marginLeft="@dimen/_4sdp" android:layout_marginTop="@dimen/_6sdp" android:layout_marginRight="@dimen/_4sdp" android:layout_marginBottom="@dimen/_6sdp" android:src="@drawable/ic_arrow_sub" android:contentDescription="@string/description" android:rotation="90.0" app:layout_constraintBottom_toBottomOf="@id/til_state" app:layout_constraintEnd_toEndOf="@id/til_state" app:layout_constraintTop_toTopOf="@id/til_state" app:layout_constraintVertical_bias="0.2" app:tint="@color/text_color_4c" />
                <TextView android:textSize="@dimen/_12ssp" android:textColor="@color/colorPrimaryDark" android:id="@id/tv_save_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2sdp" android:text="@string/save_this_as" android:fontFamily="@font/inter_semibold" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/til_city" />
                <com.google.android.material.button.MaterialButton android:gravity="center" android:id="@id/btn_home" android:tag="binding_12" android:paddingLeft="0.0dip" android:paddingTop="@dimen/_8sdp" android:paddingRight="0.0dip" android:paddingBottom="@dimen/_8sdp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/home" android:textAllCaps="false" android:fontFamily="@font/inter_semibold" android:layout_marginStart="@dimen/_1sdp" android:stateListAnimator="@null" android:letterSpacing="0.0" app:iconGravity="textStart" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_office" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_save_info" app:shapeAppearance="@style/CurvedRoundedCornerCard25Percent" app:strokeColor="@color/text_color_dd" app:strokeWidth="1.0dip" />
                <com.google.android.material.button.MaterialButton android:id="@id/btn_office" android:tag="binding_13" android:paddingLeft="0.0dip" android:paddingTop="@dimen/_8sdp" android:paddingRight="0.0dip" android:paddingBottom="@dimen/_8sdp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_8sdp" android:layout_marginRight="@dimen/_8sdp" android:text="@string/office" android:textAllCaps="false" android:fontFamily="@font/inter_semibold" android:stateListAnimator="@null" android:letterSpacing="0.0" app:iconGravity="textStart" app:layout_constraintEnd_toStartOf="@id/btn_other" app:layout_constraintStart_toEndOf="@id/btn_home" app:layout_constraintTop_toBottomOf="@id/tv_save_info" app:shapeAppearance="@style/CurvedRoundedCornerCard25Percent" app:strokeColor="@color/text_color_dd" app:strokeWidth="1.0dip" />
                <com.google.android.material.button.MaterialButton android:id="@id/btn_other" android:tag="binding_14" android:paddingLeft="0.0dip" android:paddingTop="@dimen/_8sdp" android:paddingRight="0.0dip" android:paddingBottom="@dimen/_8sdp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/other" android:textAllCaps="false" android:fontFamily="@font/inter_semibold" android:layout_marginEnd="@dimen/_1sdp" android:stateListAnimator="@null" android:letterSpacing="0.0" app:iconGravity="textStart" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_office" app:layout_constraintTop_toBottomOf="@id/tv_save_info" app:shapeAppearance="@style/CurvedRoundedCornerCard25Percent" app:strokeColor="@color/text_color_dd" app:strokeWidth="1.0dip" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.checkbox.MaterialCheckBox android:textSize="@dimen/_13ssp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/cb_default_address" android:tag="binding_15" android:paddingLeft="@dimen/_2sdp" android:paddingTop="@dimen/_4sdp" android:paddingRight="@dimen/_2sdp" android:paddingBottom="@dimen/_4sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_6sdp" android:minHeight="0.0dip" android:text="Make this my default address" android:fontFamily="@font/inter_medium" android:layout_marginStart="@dimen/_minus5sdp" android:buttonTint="@color/link_text" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.card.MaterialCardView android:id="@id/ll_proceed" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardElevation="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:shapeAppearance="@style/TopRoundedCornerCard">
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/_12ssp" android:textColor="@color/white" android:id="@id/btn_proceed" android:padding="@dimen/_8sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_4sdp" android:layout_marginTop="@dimen/_4sdp" android:layout_marginRight="@dimen/_4sdp" android:layout_marginBottom="@dimen/_4sdp" android:text="@string/save_address" android:textAllCaps="false" android:fontFamily="@font/inter_semibold" android:backgroundTint="@color/link_text" android:letterSpacing="0.0" app:shapeAppearance="@style/AllRoundedCornerCard" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>